Closed Bug 866470 Opened 11 years ago Closed 11 years ago

Intermittent layout/reftests/bugs/289480.html#top | assertion count 1 is more than expected 0 assertions, from "Should not be trying to paint a background color if we don't have one: 'drawBackgroundColor'"

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: RyanVM, Unassigned)

References

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Matt, I see you added this assertion back in bug 798964. Can you take a look please?

https://tbpl.mozilla.org/php/getParsedLog.php?id=22304828&tree=Mozilla-Inbound

Rev4 MacOSX Snow Leopard 10.6 mozilla-inbound debug test reftest on 2013-04-26 16:45:04 PDT for push 53a6f358005e
slave: talos-r4-snow-079

16:56:08     INFO -  ###!!! ASSERTION: Should not be trying to paint a background color if we don't have one: 'drawBackgroundColor', file ../../../layout/base/nsCSSRendering.cpp, line 2722
16:56:08     INFO -  nsCSSRendering::PaintBackgroundColor(nsPresContext*, nsRenderingContext&, nsIFrame*, nsRect const&, nsRect const&, unsigned int) [layout/base/nsCSSRendering.cpp:1609]
16:56:08     INFO -  nsDisplayBackgroundColor::Paint(nsDisplayListBuilder*, nsRenderingContext*) [obj-firefox/dist/include/nsRect.h:51]
16:56:08     INFO -  mozilla::FrameLayerBuilder::DrawThebesLayer(mozilla::layers::ThebesLayer*, gfxContext*, nsIntRegion const&, nsIntRegion const&, void*) [layout/base/FrameLayerBuilder.cpp:3295]
16:56:08     INFO -  mozilla::layers::ThebesLayerOGL::RenderLayer(int, nsIntPoint const&) [obj-firefox/dist/include/mozilla/gfx/BaseRect.h:44]
16:56:08     INFO -  mozilla::layers::ContainerLayerOGL::RenderLayer(int, nsIntPoint const&) [obj-firefox/dist/include/GLContext.h:172]
16:56:08     INFO -  mozilla::layers::ContainerLayerOGL::RenderLayer(int, nsIntPoint const&) [obj-firefox/dist/include/GLContext.h:172]
16:56:08     INFO -  mozilla::layers::LayerManagerOGL::Render() [gfx/layers/opengl/LayerManagerOGL.cpp:837]
16:56:08     INFO -  mozilla::layers::LayerManagerOGL::EndTransaction(void (*)(mozilla::layers::ThebesLayer*, gfxContext*, nsIntRegion const&, nsIntRegion const&, void*), void*, mozilla::layers::LayerManager::EndTransactionFlags) [gfx/layers/opengl/LayerManagerOGL.cpp:566]
16:56:08     INFO -  nsDisplayList::PaintForFrame(nsDisplayListBuilder*, nsRenderingContext*, nsIFrame*, unsigned int) const [layout/base/nsDisplayList.h:306]
16:56:08     INFO -  nsDisplayList::PaintRoot(nsDisplayListBuilder*, nsRenderingContext*, unsigned int) const [obj-firefox/dist/include/GeckoProfilerImpl.h:233]
16:56:08     INFO -  nsLayoutUtils::PaintFrame(nsRenderingContext*, nsIFrame*, nsRegion const&, unsigned int, unsigned int) [layout/base/nsLayoutUtils.cpp:2095]
16:56:08     INFO -  PresShell::Paint(nsView*, nsRegion const&, unsigned int) [layout/base/nsPresShell.cpp:5587]
16:56:08     INFO -  nsViewManager::ProcessPendingUpdatesForView(nsView*, bool) [obj-firefox/dist/include/nsRegion.h:75]
16:56:08     INFO -  nsRefreshDriver::Tick(long long, mozilla::TimeStamp) [obj-firefox/dist/include/nsAutoPtr.h:880]
16:56:08     INFO -  mozilla::RefreshDriverTimer::Tick() [obj-firefox/dist/include/nsTArray.h:363]
16:56:08     INFO -  nsTimerImpl::Fire() [xpcom/threads/nsTimerImpl.cpp:562]
16:56:08     INFO -  nsTimerEvent::Run() [xpcom/threads/nsTimerImpl.cpp:634]
16:56:08     INFO -  nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:627]
16:56:08     INFO -  NS_ProcessPendingEvents(nsIThread*, unsigned int) [obj-firefox/xpcom/build/nsThreadUtils.cpp:188]
16:56:08     INFO -  nsBaseAppShell::NativeEventCallback() [widget/xpwidgets/nsBaseAppShell.cpp:98]
16:56:08     INFO -  nsAppShell::ProcessGeckoEvents(void*) [widget/cocoa/nsAppShell.mm:388]
16:56:08     INFO -  CoreFoundation + 0x4e401
16:56:08     INFO -  CoreFoundation + 0x4c5f9
16:56:08     INFO -  CoreFoundation + 0x4bdbf
16:56:08     INFO -  HIToolbox + 0x2e7ee
16:56:08     INFO -  HIToolbox + 0x2e551
16:56:08     INFO -  HIToolbox + 0x2e4ac
16:56:08     INFO -  AppKit + 0x43eb2
16:56:08     INFO -  -AppKit + 0x43801
16:56:08     INFO -  -[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] [widget/cocoa/nsAppShell.mm:164]
16:56:08     INFO -  -AppKit + 0x968f
16:56:08     INFO -  nsAppShell::Run() [widget/cocoa/nsAppShell.mm:741]
16:56:08     INFO -  nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:289]
16:56:08     INFO -  XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:3879]
16:56:08     INFO -  XREMain::XRE_main(int, char**, nsXREAppData const*) [toolkit/xre/nsAppRunner.cpp:3946]
16:56:08     INFO -  XRE_main [toolkit/xre/nsAppRunner.cpp:4147]
16:56:08     INFO -  main [browser/app/nsBrowserApp.cpp:271]
16:56:08     INFO -  --DOMWINDOW == 15 (0x12cd82620) [serial = 4989] [outer = 0x127502fc0] [url = data:text/html;charset=UTF-8,%3C%21%2D%2DCLEAR%2D%2D%3E]
16:56:08     INFO -  REFTEST TEST-START | http://localhost:4444/1367020010424/152/289480-ref.html | 1904 / 9275 (20%)
16:56:08     INFO -  ++DOMWINDOW == 16 (0x12cd82620) [serial = 4994] [outer = 0x127502fc0]
16:56:09     INFO -  REFTEST TEST-PASS | file:///Users/cltbld/talos-slave/test/build/tests/reftest/tests/layout/reftests/bugs/289480.html#top | image comparison (==)
16:56:09     INFO -  REFTEST INFO | Loading a blank page
16:56:09     INFO -  ++DOMWINDOW == 17 (0x12c1e2650) [serial = 4995] [outer = 0x127502fc0]
16:56:09     INFO -  REFTEST TEST-UNEXPECTED-FAIL | file:///Users/cltbld/talos-slave/test/build/tests/reftest/tests/layout/reftests/bugs/289480.html#top | assertion count 1 is more than expected 0 assertions
OS: Mac OS X → All
Hardware: x86 → All
Summary: Intermittent layout/reftests/bugs/289480.html#top | assertion count 1 is more than expected 0 assertions → Intermittent layout/reftests/bugs/289480.html#top | assertion count 1 is more than expected 0 assertions, from "Should not be trying to paint a background color if we don't have one: 'drawBackgroundColor'"
Matt, can you get the ball rolling on this please? We're hitting it pretty frequently across all platforms.
Flags: needinfo?(matt.woodrow)
Depends on: 869731
Bit of a guess, but that's the only reason I can see why they might come up with different results.
Attachment #747203 - Flags: review?(roc)
Flags: needinfo?(matt.woodrow)
As best I can tell, nothing ever landed here, but this seems to have disappeared. Any ideas, Matt?
That doesn't really make sense to me.

I'll land the fix anyway, it should be a valid change regardless.

https://hg.mozilla.org/integration/mozilla-inbound/rev/c4eae0d77d5e
https://hg.mozilla.org/mozilla-central/rev/c4eae0d77d5e
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: