Bug 866470 - Make the style context lookup in nsDisplayList match what nsCSSRendering does. r=roc